# term_2_ass_task

./: .gitignore  .gitmodules  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  PROJECT_DOCUMENTATION.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  glad.vcxproj  glad.vcxproj.filters  tempCodeRunnerFile.cpp  tempCodeRunnerFile.python  term_2.sln  term_2.vcxproj  term_2.vcxproj.filters
glad.dir/Debug/glad.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
src/: astrophysics.hpp  main.cpp  physics.hpp  project_logic.hpp  renderer.hpp
term_2.dir/Debug/: term_2.exe.recipe  term_2.ilk
term_2.dir/Debug/term_2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
